--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/ConexionBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=D:\\Documentos\\Desktop\\mysql-connector-java-8.0.21\\jcalendar-1.4.jar
 file.reference.mysql-connector-java-8.0.21.jar=D:\\Documentos\\Desktop\\mysql-connector-java-8.0.21\\mysql-connector-java-8.0.21.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.21.jar}
+    ${file.reference.mysql-connector-java-8.0.21.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
